Adjusted cell formating of ship info.

--- a/main.html
+++ b/main.html
@@ -11,10 +11,7 @@
     <body>
         <table id="shipTable">
             <tr>
-                <th>Icon</th>
-                <th>Ship Name</th>
-                <th>Reload</th>
-                <th>Stat Bonuses (%)</th>
+                <th colspan="2">Ship</th>
                 <th>Weapon</th>
                 <th>Expected Cooldown (s)</th>
                 <th>Optimize to Ship?</th>
