--- a/main.html
+++ b/main.html
@@ -5,14 +5,17 @@
         <script src="main.js"></script>
         <link rel="stylesheet" href="styles.css">
 
-        <script>GetShipNames()</script>
+        <script>
+            GetShipNames()
+            GetWeaponNames()
+        </script>
     </head>
 
     <body>
         <table id="shipTable">
             <tr>
                 <th colspan="2">Ship</th>
-                <th>Weapon</th>
+                <th colspan="2">Weapon</th>
                 <th>Expected Cooldown (s)</th>
                 <th>Optimize to Ship?</th>
             </tr>
