--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <html>
     <head>
         <script src="main.js"></script>
+        <script src="query.js"></script>
         <link rel="stylesheet" href="styles.css">
-
-        <script>
-            GetShipNames()
-            GetWeaponNames()
-        </script>
     </head>
 
     <body>
@@ -23,5 +19,10 @@
 
         <input id="generateRowButton" type="button" onclick="GenerateRow()" value="Generate Row" disabled="true"></input>
         <input type="button" onclick="Calculate()" value="Calculate"></input>
+
+        <script>
+            GetShipNames()
+            GetWeaponNames()
+        </script>
     </body>
 </html>
