Implemented dynamic timing graph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1 style="text-align:center">Azur Lane Battleship Calculator</h1>
-        <div id="root">
+        <div id="root" class="parent">
         </div>
     </body>
 </html>
