Integrated express and mongoDB backend

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Azur Lane Battleship Calculator</title>
         <link rel="stylesheet" href="styles.css">
         <script type='module' src="./src/main.jsx"></script>
+        <base href="./">
     </head>
 
     <body>
