Added ship image info close to game variant.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <div id="loader" class="centered" style="visibility: hidden;">
+        <div id="loader" class="centered-both" style="visibility: hidden;">
             <img src="src/assets/new_jersey_meme.jpg" width="222" height="192" class="displayed">
             <br></br>
             <h1 style="text-align:center">Loading database. Please wait...</h1>
